# arrow-scalars

./: Cargo.toml  README.md  arrow_scalars.proto  build.rs
src/: arrow_scalars.rs  dict_array_builder.rs  lib.rs  list.rs  proto_types.rs  record_batch.rs  scalar.rs  time.rs
