[package]
name = "arrow_scalars"
version = "0.3.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "28.0", default-features = false, features = ["ipc"] }
half = "2.2.1"
tonic = { version = "0.8.3", default-features = false, features = ["codegen", "prost"] } 
prost = { version = "0.11.5", default-features = false }
prost-types = { version = "0.11.5", default-features = false }
chrono = "0.4"
thiserror = "1.0.31"
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
tonic-build = { version = "0.8.4", default-features = false, features = ["prost"] }